[gd_scene load_steps=4 format=3 uid="uid://dws8ccao22fsv"]

[ext_resource type="Script" path="res://Scripts/BadWave.gd" id="1_xhcdl"]
[ext_resource type="Texture2D" uid="uid://35nv6kagv3hm" path="res://Sprites/waves.png" id="2_2tqhc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_st8or"]
size = Vector2(64, 64)

[node name="BadWave" type="Area2D"]
script = ExtResource("1_xhcdl")
metadata/_edit_group_ = true

[node name="BadWave" type="Sprite2D" parent="."]
modulate = Color(0.858824, 0.858824, 0.858824, 1)
texture = ExtResource("2_2tqhc")

[node name="TimerBadWave" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_st8or")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="TimerBadWave" to="." method="_on_timer_bad_wave_timeout"]
